--- a/index.html
+++ b/index.html
@@ -6,30 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeux de dés</title>
     <link rel="stylesheet" href="styleHomePage.css"> 
+    <link rel="stylesheet" href="style-dice-loader.css"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 </head>
 <body>
+    
+        <div class="container centering-block" id="centering">
+            <div class="loader centered">
+                <div class="square square_one"></div>
+                <div class="square square_two"></div>
+                <div class="square square_three"></div>
+                <div class="square square_four"></div>
+                <div class="square square_five"></div>
+                <div class="square square_six"></div>
+                <div class="square square_seven"></div>
+                <div class="square square_eight"></div>
+                <div class="square square_nine"></div>
+            </div>
+        </div>
     <div class="container-fluid">
         <div class="title" id="title">JEUX DE DÉS</div>
         <div class="start">
-            <button class="button" id="button">START!</button>
+            <button class="button" id="button"><a href="pageGame.html">START</a></button>
         </div>
     </div>
-    <div class="container centering-block" id="centering" style="display: none" >
-        <div class="loader centered">
-          <div class="square square_one"></div>
-          <div class="square square_two"></div>
-          <div class="square square_three"></div>
-          <div class="square square_four"></div>
-          <div class="square square_five"></div>
-          <div class="square square_six"></div>
-          <div class="square square_seven"></div>
-          <div class="square square_eight"></div>
-          <div class="square square_nine"></div>
-        </div>
-      </div>
 
     <script src="scriptHomePage.js"></script>
 </body>
