--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container-fluid">
         <div class="title" id="title">JEUX DE DÉS</div>
         <div class="start">
-            <button class="button" id="button"><a href="pageGame.html">START</a></button>
+            <button class="button" id="button"><a href="pageGame.html"><i class="fa-solid fa-dice"></i></a></button>
         </div>
     </div>
 
