--- a/pageGame.html
+++ b/pageGame.html
@@ -41,12 +41,19 @@
             <button class="button" id="promptPlayer2">Joueur 2</button>
         </div>
         <div class="start">
-            <button type="button" id="annonymousGame" class="btn btn-secondary disabled"
+            <button type="button" id="annonymousGame" class="btn btn-secondary"
                 style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 2rem;">
                 Partie annonymes
             </button>
         </div>
+        <div class="start">
+            <button type="button" id="startButton" class="btn btn-secondary"
+            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 2rem;">
+            Start!
+        </button>
+        </div>
     </div>
+
     <script src="scriptHomePage.js"></script>
 </body>
 
