--- a/pageGame.html
+++ b/pageGame.html
@@ -14,6 +14,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&family=Zen+Maru+Gothic:wght@300;700&display=swap" rel="stylesheet"> 
 
 </head>
 
@@ -54,7 +57,7 @@
         </div>
     </div>
 
-    <script src="scriptHomePage.js"></script>
+    <script type="module" src="scriptHomePage.js"></script>
 </body>
 
 </html>
