--- a/pagePlay.html
+++ b/pagePlay.html
@@ -8,13 +8,15 @@
     <title>Jeux de dés</title>
     <link rel="stylesheet" href="style-dice-loader.css">
     <link rel="stylesheet" href="styleGamePage.css">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
-        <script src="https://kit.fontawesome.com/8f9f309d6f.js" crossorigin="anonymous"></script>
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/8f9f309d6f.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&family=Zen+Maru+Gothic:wght@300;700&display=swap" rel="stylesheet"> 
 
 </head>
 
@@ -35,26 +37,31 @@
     </div>
     <!-- loader divs end -->
     <div class="contain container">
+        <div class="diceIcon row">
+            <i class="fa-solid fa-dice fa-6x"></i></div>
+            <!-- global Score -->
         <div class="row score">
-            <div id="score1" class="col-6">score1</div>
-            <div class="col-6">score players 2</div>
-            <div class="play">${joueur?}, à vous de jouer !</div>
-            <div class="play"><i class="fa-solid fa-arrow-down fa-2x"></i></div>
+            <div class="col-6 play" id="globalScore1"></div>
+            <div class="col-6 play" id="globalScore2"></div>
         </div>
-        <div class="row lancer">
-            <button class="btn col" id="throw"><i class="fa-solid fa-dice fa-9x"></i></button>
+        <!-- Round Score -->
+        <div class="row score">
+            <div class="col-6 play" id="roundScore1"></div>
+            <div class="col-6 play" id="roundScore2"></div>
         </div>
-        <p class="play">Roll!</p>
+        <span class="play score" id="displayTurnPlayer"></span>
+        <div class="lancer">
+            <button class="button col play score" id="roll">Lancer!</button>
+        </div>
+        <div class='lancer'>
+            <button class="button col play" id="hold">Stop!</button>
+        </div>
         <div class="img-contain">
-            <div class="col-6 img-box">
-                <img src="img/imgDice/dice-1.png" class="img-dice">
-            </div>
-            <div class="col-6 img-box">
+            <div class="col img-box">
                 <img src="img/imgDice/dice-1.png" class="img-dice">
             </div>
         </div>
     </div>
-    <script src="scriptGamePage.js"></script>
+    <script type="module" src="scriptGamePage.js"></script>
 </body>
-
 </html>
