--- a/pageGame.html
+++ b/pageGame.html
@@ -57,7 +57,7 @@
         </div>
     </div>
 
-    <script type="module" src="scriptHomePage.js"></script>
+    <script src="scriptHomePage.js"></script>
 </body>
 
 </html>
