--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="square square_six"></div>
                 <div class="square square_seven"></div>
                 <div class="square square_eight"></div>
-                <div class="square square_nine"></div>
+                <div class="square square_nine"></div>.
             </div>
         </div>
     <div class="container-fluid">
