home page stylised, all good

--- a/pageGame.html
+++ b/pageGame.html
@@ -36,21 +36,21 @@
     </div>
 
     <div class="container-fluid">
-        <div class="title" id="title">Bienvenue dans jeux de dés!</div>
+        <div class="title" id="title">Jeux de dés!</div>
 
         <div class="row start info">Entrez le nom des joueurs:</div>
         <div class="start">
-            <button class="button" id="promptPlayer1">Joueur 1</button>
-            <button class="button" id="promptPlayer2">Joueur 2</button>
+            <button class="btn btn-info button" id="promptPlayer1">Joueur 1</button>
+            <button class="btn btn-danger button" id="promptPlayer2">Joueur 2</button>
         </div>
         <div class="start">
-            <button type="button" id="annonymousGame" class="btn btn-secondary"
+            <button type="button" id="annonymousGame" class="btn"
                 style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 2rem;">
                 Partie annonymes
             </button>
         </div>
         <div class="start">
-            <button type="button" id="startButton" class="btn btn-secondary"
+            <button type="button" id="startButton" class="btn btn-dark"
             style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 2rem;">
             Start!
         </button>
