--- a/index.html
+++ b/index.html
@@ -1,37 +1,63 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeux de dés</title>
-    <link rel="stylesheet" href="styleHomePage.css"> 
-    <link rel="stylesheet" href="style-dice-loader.css"> 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styleHomePage.css">
+    <link rel="stylesheet" href="style-dice-loader.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&family=Zen+Maru+Gothic:wght@300;700&display=swap" rel="stylesheet"> 
 
 </head>
+
 <body>
-    
-        <div class="container centering-block" id="centering">
-            <div class="loader centered">
-                <div class="square square_one"></div>
-                <div class="square square_two"></div>
-                <div class="square square_three"></div>
-                <div class="square square_four"></div>
-                <div class="square square_five"></div>
-                <div class="square square_six"></div>
-                <div class="square square_seven"></div>
-                <div class="square square_eight"></div>
-                <div class="square square_nine"></div>.
-            </div>
-        </div>
-    <div class="container-fluid">
-        <div class="title" id="title">JEUX DE DÉS</div>
-        <div class="start">
-            <button class="button" id="button"><a href="pageGame.html"><i class="fa-solid fa-dice"></i></a></button>
+    <div class="container centering-block" id="centering">
+        <div class="loader centered">
+            <div class="square square_one"></div>
+            <div class="square square_two"></div>
+            <div class="square square_three"></div>
+            <div class="square square_four"></div>
+            <div class="square square_five"></div>
+            <div class="square square_six"></div>
+            <div class="square square_seven"></div>
+            <div class="square square_eight"></div>
+            <div class="square square_nine"></div>
         </div>
     </div>
-</body>
-</html>
 
+    <div class="container-fluid">
+        <div class="title" id="title">Jeux de dés!</div>
+
+        <div class="row start info">Entrez le nom des joueurs:</div>
+        <div class="start">
+            <button class="btn btn-info button" id="promptPlayer1">Joueur 1</button>
+            <button class="btn btn-danger button" id="promptPlayer2">Joueur 2</button>
+        </div>
+        <div class="start">
+            <button type="button" id="annonymousGame" class="btn"
+                style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 2rem;">
+                Partie annonymes
+            </button>
+        </div>
+        <div class="start">
+            <button type="button" id="startButton" class="btn btn-dark"
+            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 2rem;">
+            Start!
+        </button>
+        </div>
+    </div>
+
+    <script src="scriptHomePage.js"></script>
+</body>
+
+</html>
