--- a/pagePlay.html
+++ b/pagePlay.html
@@ -41,11 +41,11 @@
         <div>
             <button class="btn btnInfo btnRules" id="btnRule"><i class="fa-solid fa-circle-question"></i></button>
             <div id="rule" class="rule">
-                <b>Régles du Jeux</b> : A chaques tours , un joueur lances les dès. Il a alors deux choix, cliquer sur</br>
-                    "Stop" va stocker le score du tour, et va alors laisser la main au joueur adverse. A l'inverse, il peux</br>
-                    cliquer sur "lancer" ce qui lui permettre de tenter de recolter plus de point sur ce tour. <b>Attention!</b><br> si le</br>
-                    lance le numéros 1, il donne la main et perd tout les point accumulé durant ce tour. Le premier joueur qui obtiens</br>
-            un score de 100 a gagné!<br>
+                <b>Régles du Jeux</b> : A chaques tours , un joueur lances les dès. Il a alors deux choix:</br>
+                Cliquer sur "Stop" va stocker le score du tour, et va alors laisser la main au joueur adverse.</br>
+                A l'inverse, cliquer sur "lancer" va permettre de tenter de recolter plus de point sur ce tour.</br>
+                <b>Attention!</b><br>si le joueur sort le numéros 1, il donne la main et perd tout les point accumulé durant ce tour!</br>
+                Le premier joueur qui obtiens le score de 100 a gagné!<br>
                     <button class="btn btnRules" id="btnRulesHide"><i class="fa-solid fa-arrow-up"></i></button>
         </div>
         </div>
